syntax = "proto3";

option csharp_namespace = "RateLimiter.Reader.Grpc";

package reader;

service RateLimitService {
  rpc GetRateLimits (RateLimitRequest) returns (RateLimitResponse);
}

message RateLimitRequest {}

message RateLimitResponse {
  repeated RateLimit rate_limits = 1;
}

message RateLimit {
  string route = 1;
  int32 requests_per_minute = 2;
}
