syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package user;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc GetUserByName (GetUserByNameRequest) returns (UsersResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    int32 id = 1;
    string login = 2;
    string password = 3;
    string name = 4;
    string surname = 5;
    int32 age = 6;
}

message CreateUserRequest {
    string login = 1;
    string password = 2;
    string name = 3;
    string surname = 4;
    int32 age = 5;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByNameRequest {
    string name = 1;
    string surname = 2;
}

message UsersResponse {
    repeated User users = 1;
}

message UserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    string password = 2;
    string name = 3;
    string surname = 4;
    int32 age = 5;
}

message UpdateUserResponse {
    bool success = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}
